[package]
authors = ["cLazyZombie <rusad96@gmail.com>"]
edition = "2018"
name = "udp-chat"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
crossbeam-channel = "0.5"
rand = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.7", features = ["full"]}
